Update README for version 1.3 and implement cooldown system
- Added cooldown system for secondary and special attacks
- Secondary and special attack buttons are now initially disabled
- Cooldowns decrement correctly after each turn
- Primary attacks now affect cooldowns for secondary and special attacks
- Updated README to reflect the changes and new features in version 1.3

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Electrolize&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Electrolize&family=Press+Start+2P&display=swap');
 
 :root {
   --color-primary: #397367;
@@ -41,17 +41,17 @@
 *::after {
   box-sizing: border-box;
   margin: 0;
-  font-weight: normal;
+  font-weight: 700;
 }
 
 body {
   min-height: 100vh;
   color: var(--color-text);
-  background: var(--color-background);
+  background: var(--color-background-mute);
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
-  font-family: 'Electrolize', sans-serif !important;
-  font-size: 15px;
+  font-family: 'Electrolize', sans-serif, 'Press Start 2P', system-ui;
+  font-size: 16px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
